# PokeZOO

./: .gitignore  README.md  package.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
frontend/: .env  .firebaserc  .gitignore  Dockerfile  fly.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/public/js/: loader.js  module.js
frontend/public/wasm/: out.js  out.wasm  pokezoo.js  pokezoo.wasm
frontend/src/: App.tsx  main.tsx
frontend/src/features/canvas/: index.tsx
shared/: out.js  out.wasm
tooling/file_watcher/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
tooling/file_watcher/src/: bombastic_side_eye.ts  index.ts
wasm/: .gitignore  CMakeLists.txt  build.sh  debug.json
wasm/cmake.desktop/: CMakeLists.txt
wasm/cmake.wasm/: CMakeLists.txt
wasm/src/: animation.h  animation_controller.cpp  animation_controller.h  animation_frame.h  application.cpp  application.h  application.hpp  asset_manager.cpp  asset_manager.h  character.cpp  character.h  includes.h  input_hander.cpp  input_handler.cpp  input_handler.h  main.cpp  sprite.cpp  sprite.h  utils.h  yet_another_enums_header_file.h  yet_another_math_header_file.h
wasm/src/assets/tiled/: zoo.tiled-session  zoo.tmx  zoo_1.tiled-session
wasm/src/assets/xml/animations/: characters_no_bg.xml
